Updated webpack.config with entry and output

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <title>Local Development</title>
 
-    <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script>
+    <!-- <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script> -->
 
     <style>
         html,
@@ -27,8 +27,8 @@
 
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
-
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
+    <script src="./bundle.js"></script>
 </body>
 
 </html>
