Implemented build + zip + eslint

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
-    <title>Local Development</title>
+    <title>Babylon Test</title>
 
     <!-- <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script> -->
 
