Implemented glow and fog effects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Babylon Test</title>
 
     <!-- <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script> -->
+    <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' /> -->
     
 
     <style>
