--- a/index.html
+++ b/index.html
@@ -1,53 +1,50 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
+  <head>
     <title>Babylon Test</title>
 
     <!-- <script src="https://code.jquery.com/pep/0.4.2/pep.min.js"></script> -->
     <!-- <script src='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v0.53.0/mapbox-gl.css' rel='stylesheet' /> -->
-    
 
     <style>
-        html,
-        body {
-            width: 100%;
-            height: 100%;
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
+      html,
+      body {
+        width: 100%;
+        height: 100%;
+        padding: 0;
+        margin: 0;
+        overflow: hidden;
+      }
 
-        #renderCanvas {
-            width: 100%;
-            height: 100%;
-            display: block;
-            font-size: 0;
-        }
+      #renderCanvas {
+        width: 100%;
+        height: 100%;
+        display: block;
+        font-size: 0;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
     <script src="./bundle.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
     <script type="text/javascript">
-        var stats = new Stats();
-        stats.showPanel( 0 ); // 0: fps, 1: ms, 2: mb, 3+: custom
-        document.body.appendChild( stats.domElement );
-        stats.domElement.style.position = 'absolute';
-        stats.domElement.style.top = 0;
-        function animate() {
-            stats.begin();
-            // monitored code goes here
-            stats.end();
-            requestAnimationFrame( animate );
-        }
+      var stats = new Stats();
+      stats.showPanel(0); // 0: fps, 1: ms, 2: mb, 3+: custom
+      document.body.appendChild(stats.domElement);
+      stats.domElement.style.position = "absolute";
+      stats.domElement.style.top = 0;
+      function animate() {
+        stats.begin();
+        // monitored code goes here
+        stats.end();
+        requestAnimationFrame(animate);
+      }
 
-        requestAnimationFrame( animate );  
+      requestAnimationFrame(animate);
     </script>
-</body>
-
+  </body>
 </html>
