--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <canvas id="renderCanvas" touch-action="none"></canvas>
     <script src="./bundle.js"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.min.js"></script>
     <script type="text/javascript">
       var stats = new Stats();
       stats.showPanel(0); // 0: fps, 1: ms, 2: mb, 3+: custom
@@ -47,6 +47,6 @@
       }
 
       requestAnimationFrame(animate);
-    </script>
+    </script> -->
   </body>
 </html>
